--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,21 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--EditText-->
+    <string name="title">Title</string>
+    <string name="date">Date</string>
+
+    <!--Button-->
+    <string name="next">Next</string>
+    <string name="cancel">Cancel</string>
+
+    <!--Error-->
+    <string name="NoTitleError">Enter title to continue</string>
+
+    <!--bundle-->
+    <string name="bundleGetTitle">BundleTitle</string>
 </resources>
